--- a/templates/carbono/teste.html
+++ b/templates/carbono/teste.html
@@ -30,25 +30,25 @@
   <section id="sobre" class="container text">
     <h2>Como funcionam o Crédito de Carbono?</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quos, eum laboriosam quis molestiae similique illo quaerat sint saepe alias ad nam amet dignissimos at, blanditiis, aut possimus deleniti! Laborum autem inventore aliquam mollitia maiores magnam, est numquam tenetur illum ut veritatis eius accusamus vero neque incidunt distinctio! Suscipit blanditiis atque reprehenderit vitae omnis vel optio aliquam aliquid, rem alias nesciunt labore quis earum totam itaque nemo? Aliquid esse accusamus corporis, numquam laboriosam reiciendis aperiam blanditiis! Vel adipisci aliquid ea alias incidunt eos aut sunt quae perspiciatis corporis laudantium, cum molestias delectus fuga voluptate nisi expedita, iste ducimus sint. Aliquam similique quisquam quis voluptates vel dignissimos molestias, culpa, voluptate vitae error quo labore esse recusandae necessitatibus nihil veritatis officiis sint soluta beatae est odit voluptas possimus vero suscipit. Aut aliquam officiis cum voluptas non soluta expedita ex, perferendis mollitia laborum reiciendis, quia tenetur sed voluptates inventore laudantium consectetur officia eius ipsum tempora aspernatur eveniet, modi numquam quaerat? Pariatur suscipit, illo minima cum sequi non sit vel aut laborum alias ea repellendus tenetur quibusdam a mollitia repudiandae asperiores.</p>
-      
   </section>
 
   <section id="xx" class="yyy">
     <div id="zzzz" class="fffff">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione molestias architecto blanditiis quam. Dolore, doloribus nisi molestiae facilis possimus porro ex nulla. Alias consequatur deserunt, fugit dolorum tempore sapiente. Officia, necessitatibus eos qui temporibus corporis, distinctio fugiat vero corrupti quae itaque rerum totam nostrum animi at cumque fugit recusandae ex! Beatae atque voluptatem modi asperiores quo quis necessitatibus cupiditate dolorem suscipit, quisquam perferendis architecto nostrum commodi quidem quod cumque praesentium eum veritatis assumenda alias! Possimus numquam rerum dolore itaque, molestiae eaque officiis facere? Hic eligendi nulla voluptas consectetur a laudantium iusto, enim accusamus adipisci accusantium sed. Animi perferendis fuga debitis consequatur alias repudiandae, quasi, eaque vel cum labore iusto pariatur quos expedita molestias rerum omnis. Iure nobis tenetur consequuntur ex nihil, cum quaerat labore. Ipsa magni incidunt consequatur excepturi eius praesentium vero quibusdam aliquam illo quisquam, eum asperiores. Quam delectus eius porro quod nostrum doloribus ipsam veniam ad inventore. Fuga, error fugiat. Beatae veritatis similique fuga optio ad labore quisquam explicabo libero rem alias ut animi, cupiditate dignissimos nisi molestias nam expedita, doloremque tenetur aut sit eos, sunt nobis laudantium! Illo neque tempora autem ipsam ipsum magni cum consequatur officia, doloribus, aliquid labore earum provident dolor expedita. Officiis unde, nobis error quidem obcaecati esse voluptate necessitatibus commodi dolores soluta dolor aperiam libero ipsa sequi. Fugit consequatur error inventore expedita dolores, necessitatibus quisquam saepe quas voluptatem tempora suscipit! Aliquam adipisci sequi laudantium voluptatem sint cumque praesentium quaerat harum non ab vero, fugiat recusandae qui perferendis, error ducimus saepe veritatis quam odit aut officia reiciendis optio. Vitae illo officia tempora, iste nihil, molestiae, quae at itaque voluptatibus aperiam placeat voluptatum explicabo ipsum laudantium quod sit adipisci quisquam? Distinctio, voluptatibus officia. Rerum sunt omnis dolores excepturi molestiae qui asperiores laboriosam architecto minima non numquam atque aspernatur obcaecati exercitationem eius reiciendis, deserunt ullam maxime magnam. Rem magnam impedit omnis id dolorem voluptatum qui voluptate. Neque magnam veniam repellat similique velit hic incidunt qui fuga distinctio officiis eveniet expedita delectus repudiandae, consequuntur, quod fugiat adipisci officia porro tempora dolorem laboriosam? Nihil labore ipsum molestias placeat perferendis! Obcaecati repellat pariatur doloremque quasi cumque culpa provident incidunt velit eligendi sequi deleniti, voluptas dolorem quos a ipsum natus dolore officiis architecto quisquam repellendus. Repellat distinctio tenetur rerum eius facere laborum, aliquid incidunt labore maxime, culpa ut, eum exercitationem possimus quaerat. Inventore incidunt laudantium laboriosam voluptates repellat repellendus reiciendis veniam fuga ea deleniti? Sapiente molestiae culpa esse nostrum recusandae!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione molestias architecto blanditiis quam. Dolore, doloribus nisi molestiae facilis possimus porro ex nulla. Alias consequatur deserunt, fugit dolorum tempore sapiente. Officia, necessitatibus eos qui temporibus corporis, distinctio fugiat vero corrupti quae itaque rerum totam nostrum animi at cumque fugit recusandae ex! Beatae atque voluptatem modi asperiores quo quis necessitatibus cupiditate dolorem suscipit, quisquam perferendis architecto nostrum commodi quidem quod cumque praesentium eum veritatis assumenda alias! Possimus numquam rerum dolore itaque, molestiae eaque officiis facere? Hic eligendi nulla voluptas consectetur a laudantium iusto, enim accusamus adipisci accusantium sed. Animi perferendis fuga debitis consequatur alias repudiandae, quasi, eaque vel cum labore iusto pariatur quos expedita molestias rerum omnis. Iure nobis tenetur consequuntur ex nihil, cum quaerat labore. Ipsa magni incidunt consequatur excepturi eius praesentium vero quibusdam aliquam illo quisquam, eum asperiores. Quam delectus eius porro quod nostrum doloribus ipsam veniam ad inventore. Fuga, error fugiat. Beatae veritatis similique fuga optio ad labore quisquam explicabo libero rem alias ut animi, cupiditate dignissimos nisi molestias nam expedita, doloremque tenetur aut sit eos, sunt nobis laudantium! Illo neque tempora autem ipsam ipsum magni cum consequatur officia, doloribus, aliquid labore earum provident dolor expedita. Officiis unde, nobis error quidem obcaecati esse voluptate necessitatibus commodi dolores soluta dolor aperiam libero ipsa sequi. Fugit consequatur error inventore expedita dolores, necessitatibus quisquam saepe quas voluptatem tempora suscipit! Aliquam adipisci sequi laudantium voluptatem sint cumque praesentium quaerat harum non ab verdadeiro, fugiat recusandae qui perferendis, error ducimus saepe veritatis quam odit aut officia reiciendis optio. Vitae illo officia tempora, iste nihil, molestiae, quae at itaque voluptatibus aperiam placeat voluptatum explicabo ipsum laudantium quod sit adipisci quisquam? Distinctio, voluptatibus officia. Rerum sunt omnis dolores excepturi molestiae qui asperiores laboriosam architecto minima non numquam atque aspernatur obcaecati exercitationem eius reiciendis, deserunt ullam maxime magnam. Rem magnam impedit omnis id dolorem voluptatum qui voluptate. Neque magnam veniam repellat similique velit hic incidunt qui fuga distinctio officiis eveniet expedita delectus repudiandae, consequuntur, quod fugiat adipisci officia porro tempora dolorem laboriosam? Nihil labore ipsum molestias placeat perferendis! Obcaecati repellat pariatur doloremque quasi cumque culpa provident incidunt velit eligendi sequi deleniti, voluptas dolorem quos a ipsum natus dolore officiis architecto quisquam repellendus. Repellat distinctio tenetur rerum eius facere laborum, aliquid incidunt labore maxime, culpa ut, eum exercitationem possimus quaerat. Inventore incidunt laudantium laboriosam voluptates repellat repellendus reiciendis veniam fuga ea deleniti? Sapiente molestiae culpa esse nostrum recusandae!</p>
     </div>
+    <!-- Adicionando a imagem aqui -->
+    
   </section>
-
-  <section class="beato">
-    <a href="{% url 'teste' %}"><button id="funcionam" class="carro-a" >vcwjvnsklvskvn1</button></a>
-    <a href="{% url 'teste' %}"><button id="funcionam" class="carro-g" >vcwjvnsklvskvn2</button></a>
-    <a href="{% url 'teste' %}"><button id="funcionam" class="carro-b" >vcwjvnsklvskvn3</button></a>
-    <a href="{% url 'teste' %}"><button id="funcionam" class="energia" >vcwjvnsklvskvn4</button></a>
-
-
-  </section>
-
   
+  <img src="{% static 'css/pictures/teste_ima_prin.jpg' %}" alt="Imagem Descritiva" class="imagem-posicionada">
+  
+  <section class="beato">
+    <a href="{% url 'index' %}"><button id="funcionam" class="carro-g">Voltar</button></a>
+    <a href="{% url 'index' %}"><button id="funcionam" class="carro-a">Voltar</button></a>
+    <a href="{% url 'index' %}"><button id="funcionam" class="carro-b">Voltar</button></a>
+    <a href="{% url 'index' %}"><button id="funcionam" class="energia">Voltar</button></a>
+  </section>
+
   <section id="faq" class="container">
     <h2>FAQ</h2>
     <details>
@@ -56,8 +56,8 @@
       <p>Os créditos de carbono permitem que empresas...</p>
     </details>
     <details>
-        <summary>mfpfmsdofs</summary>
-        <p>dfmsofmds</p>
+      <summary>Por que são importantes?</summary>
+      <p>Os créditos de carbono ajudam a reduzir...</p>
     </details>
   </section>
 
