--- a/templates/carbono/teste.html
+++ b/templates/carbono/teste.html
@@ -1,64 +1,76 @@
 {% extends 'carbono/base.html' %}
 {% load static %}
 {% block content %}
+<div class='center'>
+<h1>Calculadora de Carbono</h1>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h2>Reduzindo a Pegada de Carbono</h2>
-      <p>Descubra como os créditos de carbono podem ajudar na preservação ambiental <br> e no desenvolvimento sustentável.</p>
-      <a href="#sobre" class="btn">Saiba Mais</a>
-    </div>
-  </section>
-
-  <section id="sobre" class="container text">
-    <h2>O que são Créditos de Carbono?</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod quae tenetur eveniet est voluptates esse harum rem, optio at expedita, id, praesentium doloremque pariatur commodi dolor neque perferendis. Dolorum rem, laudantium perferendis nesciunt a odit, deserunt quae fugit hic aut culpa eum. Iste sapiente illo consequuntur dolorem porro doloremque explicabo, neque provident blanditiis possimus ea, quae ullam rerum numquam delectus, libero deserunt asperiores error reiciendis. Ab suscipit obcaecati illo, pariatur saepe fugiat nesciunt voluptatum architecto quas! Eligendi ratione iste placeat voluptate sint reiciendis. Alias voluptatem totam enim rerum explicabo exercitationem aliquid quae magnam ab qui, ea maiores porro possimus, ipsa, molestiae mollitia iusto. Id deserunt earum nihil praesentium ullam cupiditate a molestias voluptatum, quos eos quas perferendis odio suscipit nobis ut nam nulla distinctio rem repellendus atque iure eum accusantium illo. Atque animi ducimus illo harum molestiae autem repellat totam eos commodi optio. Illum, enim aut odio rem sequi dignissimos dicta ea praesentium dolorem laboriosam quos vero! Architecto laboriosam, totam assumenda aut corporis atque? Assumenda commodi, eveniet magni accusantium sed cupiditate quasi at iste aperiam fuga rerum.</p>
-
-  </section>
-
-  <section id="beneficios" class="container cards">
-    <div class="card">
-      <h3>Redução de Emissões</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, doloribus! Eaque tempora modi delectus alias at. Provident ea unde quasi molestiae aspernatur eaque. Recusandae rerum quia tenetur voluptatibus quis! Soluta.</p>
-    </div>
-    <div class="card">
-      <h3>Benefícios Ambientais</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nulla labore molestias quo eveniet magni doloribus suscipit unde? Assumenda labore suscipit officiis perspiciatis maiores exercitationem fugiat fuga ex voluptas tenetur.</p>
-    </div>
-  </section>
-
-  <section id="sobre" class="container text">
-    <h2>Como funcionam o Crédito de Carbono?</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quos, eum laboriosam quis molestiae similique illo quaerat sint saepe alias ad nam amet dignissimos at, blanditiis, aut possimus deleniti! Laborum autem inventore aliquam mollitia maiores magnam, est numquam tenetur illum ut veritatis eius accusamus vero neque incidunt distinctio! Suscipit blanditiis atque reprehenderit vitae omnis vel optio aliquam aliquid, rem alias nesciunt labore quis earum totam itaque nemo? Aliquid esse accusamus corporis, numquam laboriosam reiciendis aperiam blanditiis! Vel adipisci aliquid ea alias incidunt eos aut sunt quae perspiciatis corporis laudantium, cum molestias delectus fuga voluptate nisi expedita, iste ducimus sint. Aliquam similique quisquam quis voluptates vel dignissimos molestias, culpa, voluptate vitae error quo labore esse recusandae necessitatibus nihil veritatis officiis sint soluta beatae est odit voluptas possimus vero suscipit. Aut aliquam officiis cum voluptas non soluta expedita ex, perferendis mollitia laborum reiciendis, quia tenetur sed voluptates inventore laudantium consectetur officia eius ipsum tempora aspernatur eveniet, modi numquam quaerat? Pariatur suscipit, illo minima cum sequi non sit vel aut laborum alias ea repellendus tenetur quibusdam a mollitia repudiandae asperiores.</p>
-  </section>
-
-  <section id="xx" class="yyy">
-    <div id="zzzz" class="fffff">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione molestias architecto blanditiis quam. Dolore, doloribus nisi molestiae facilis possimus porro ex nulla. Alias consequatur deserunt, fugit dolorum tempore sapiente. Officia, necessitatibus eos qui temporibus corporis, distinctio fugiat vero corrupti quae itaque rerum totam nostrum animi at cumque fugit recusandae ex! Beatae atque voluptatem modi asperiores quo quis necessitatibus cupiditate dolorem suscipit, quisquam perferendis architecto nostrum commodi quidem quod cumque praesentium eum veritatis assumenda alias! Possimus numquam rerum dolore itaque, molestiae eaque officiis facere? Hic eligendi nulla voluptas consectetur a laudantium iusto, enim accusamus adipisci accusantium sed. Animi perferendis fuga debitis consequatur alias repudiandae, quasi, eaque vel cum labore iusto pariatur quos expedita molestias rerum omnis. Iure nobis tenetur consequuntur ex nihil, cum quaerat labore. Ipsa magni incidunt consequatur excepturi eius praesentium vero quibusdam aliquam illo quisquam, eum asperiores. Quam delectus eius porro quod nostrum doloribus ipsam veniam ad inventore. Fuga, error fugiat. Beatae veritatis similique fuga optio ad labore quisquam explicabo libero rem alias ut animi, cupiditate dignissimos nisi molestias nam expedita, doloremque tenetur aut sit eos, sunt nobis laudantium! Illo neque tempora autem ipsam ipsum magni cum consequatur officia, doloribus, aliquid labore earum provident dolor expedita. Officiis unde, nobis error quidem obcaecati esse voluptate necessitatibus commodi dolores soluta dolor aperiam libero ipsa sequi. Fugit consequatur error inventore expedita dolores, necessitatibus quisquam saepe quas voluptatem tempora suscipit! Aliquam adipisci sequi laudantium voluptatem sint cumque praesentium quaerat harum non ab verdadeiro, fugiat recusandae qui perferendis, error ducimus saepe veritatis quam odit aut officia reiciendis optio. Vitae illo officia tempora, iste nihil, molestiae, quae at itaque voluptatibus aperiam placeat voluptatum explicabo ipsum laudantium quod sit adipisci quisquam? Distinctio, voluptatibus officia. Rerum sunt omnis dolores excepturi molestiae qui asperiores laboriosam architecto minima non numquam atque aspernatur obcaecati exercitationem eius reiciendis, deserunt ullam maxime magnam. Rem magnam impedit omnis id dolorem voluptatum qui voluptate. Neque magnam veniam repellat similique velit hic incidunt qui fuga distinctio officiis eveniet expedita delectus repudiandae, consequuntur, quod fugiat adipisci officia porro tempora dolorem laboriosam? Nihil labore ipsum molestias placeat perferendis! Obcaecati repellat pariatur doloremque quasi cumque culpa provident incidunt velit eligendi sequi deleniti, voluptas dolorem quos a ipsum natus dolore officiis architecto quisquam repellendus. Repellat distinctio tenetur rerum eius facere laborum, aliquid incidunt labore maxime, culpa ut, eum exercitationem possimus quaerat. Inventore incidunt laudantium laboriosam voluptates repellat repellendus reiciendis veniam fuga ea deleniti? Sapiente molestiae culpa esse nostrum recusandae!</p>
-    </div>
-    <!-- Adicionando a imagem aqui -->
+<h2>Dados do Carro</h2>
+<form method="POST">
+    {% csrf_token %}
     
-  </section>
-  
-  <img src="{% static 'css/pictures/teste_ima_prin.jpg' %}" alt="Imagem Descritiva" class="imagem-posicionada">
-  
-  <section class="beato">
-    <a href="{% url 'index' %}"><button id="funcionam" class="carro-g">Voltar</button></a>
-    <a href="{% url 'index' %}"><button id="funcionam" class="carro-a">Voltar</button></a>
-    <a href="{% url 'index' %}"><button id="funcionam" class="carro-b">Voltar</button></a>
-    <a href="{% url 'index' %}"><button id="funcionam" class="energia">Voltar</button></a>
-  </section>
+    <!-- Display all Car objects -->
+    {% for carro in carros %}
+    <div>
+        <p><strong>{{ carro.legenda }}</strong></p>
+        <label for="km_per_month_{{ carro.id }}">Km percorrido por mês:</label>
+        <input type="number" id="km_per_month_{{ carro.id }}" name="km_per_month_{{ carro.id }}" required><br>
+    </div>
+    {% endfor %}
+    
+    <button type="submit">Calcular Carro</button>
+</form>
 
-  <section id="faq" class="container">
-    <h2>FAQ</h2>
-    <details>
-      <summary>Como os créditos de carbono funcionam?</summary>
-      <p>Os créditos de carbono permitem que empresas...</p>
-    </details>
-    <details>
-      <summary>Por que são importantes?</summary>
-      <p>Os créditos de carbono ajudam a reduzir...</p>
-    </details>
-  </section>
+{% if car_data %}
+    <h2>Resultados do Carro</h2>
+    <ul>
+    {% for key, value in car_data.items %}
+      <li>{{ key }}: {{ value }}</li>
+    {% endfor %}
+    </ul>
+{% endif %}
+
+<h2>Dados de Energia</h2>
+<form method="POST">
+    {% csrf_token %}
+
+    <!-- Display all Energia objects -->
+    <select name="energy_type" id="energy_type" required>
+        <option value="">-- Escolha um modo de cálculo --</option>
+        {% for energia in energias %}
+            <option value="{{ energia.id }}">{{ energia.legenda }}</option>
+        {% endfor %}
+    </select><br><br>
+    
+    {% if selected_energy %}
+        {% if selected_energy.modo_de_calculo == 'kWh' %}  
+            <label for="kwh_used">kWh usados:</label>
+            <input type="number" id="kwh_used" name="kwh_used" required><br>
+        {% elif selected_energy.modo_de_calculo == 'Conta de Energia' %}
+            <label for="bill_amount">Valor da conta:</label>
+            <input type="number" id="bill_amount" name="bill_amount" required><br>
+        {% endif %}
+    {% endif %}
+
+    <button type="submit">Calcular Energia</button>
+</form>
+
+{% if energy_data %}
+    <h2>Resultados de Energia</h2>
+    <ul>
+        {% for key, value in energy_data.items %}
+            <li>{{ key }}: {{ value }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
+  </div>
+
+<style>
+  .center {
+    margin: auto;
+    width: 60%;
+    border: 3px solid #a5addb;
+    padding: 10px;
+  }
+</style>
 
 {% endblock %}
