--- a/templates/carbono/teste.html
+++ b/templates/carbono/teste.html
@@ -13,7 +13,7 @@
     <div>
         <p><strong>{{ carro.legenda }}</strong></p>
         <label for="km_por_mes_{{ carro.id }}">Km percorrido por mês:</label>
-        <input type="number" id="km_por_mes_{{ carro.id }}" name="km_por_mes_{{ carro.id }}" required><br>
+        <input type="number" id="km_por_mes_{{ carro.id }}" name="km_por_mes_{{ carro.id }}"><br>
     </div>
     {% endfor %}
     
