--- a/templates/carbono/index.html
+++ b/templates/carbono/index.html
@@ -40,10 +40,10 @@
   </section>
 
   <section class="beato">
-    <a href="{% url 'teste' %}"><button id="funcionam" class="carro-a" >vcwjvnsklvskvn1</button></a>
-    <a href="{% url 'teste' %}"><button id="funcionam" class="carro-g" >vcwjvnsklvskvn2</button></a>
-    <a href="{% url 'teste' %}"><button id="funcionam" class="carro-b" >vcwjvnsklvskvn3</button></a>
-    <a href="{% url 'teste' %}"><button id="funcionam" class="energia" >vcwjvnsklvskvn4</button></a>
+    <a href="{% url 'teste' %}"><button id="funcionam" class="carro-a" >Teste Calculadora 1</button></a>
+    <a href="{% url 'teste' %}"><button id="funcionam" class="carro-g" >Teste Calculadora 2</button></a>
+    <a href="{% url 'teste' %}"><button id="funcionam" class="carro-b" >Teste Calculadora 3</button></a>
+    <a href="{% url 'teste' %}"><button id="funcionam" class="energia" >Teste Calculadora 4</button></a>
 
 
   </section>
