--- a/templates/carbono/teste.html
+++ b/templates/carbono/teste.html
@@ -72,6 +72,12 @@
     {% endif %}
   </div>
 
+  */ Aqui pode colocar divs com o cálculo de Ônibus, semelhante ao Carros,
+  Não precisa inserir código Django ainda, pode colocar o HTML puro
+
+  Também inserir as divs para Gás, semelhante ao energia,
+  Pode usar também o JavaScript com lógica para as opções*/
+
   {% if total_anual %}
   <div class="container">
     <h2>Resultado Total</h2>
