Adição do calculo de gás de cozinha
- Adição do botão para limpar todas as funções (está apenas o botão, ou seja, sem funcionalidade);
- Outras melhorias.

--- a/front-end/css/pagsegundaria.css
+++ b/front-end/css/pagsegundaria.css
@@ -166,7 +166,7 @@ button:hover {
   background-color: #5DBB8A; 
 }
 
-.button-voltar {
+.button-voltar .button-excluir {
   text-align: center; 
   margin-top: 20px;
   align-content: center;
